Layout bugs

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -1,4 +1,5 @@
 @import 'mixins.less';
+
 @tablet: 768px;
 @screen-lg: 1200px;
 
@@ -37,7 +38,6 @@ p,span,ul,ol {
     color: @fg-color;
 }
 
-
 ul, ol, p {
     font-size: 22px;
 }
@@ -59,9 +59,10 @@ h1,h2,h3,h4,h5,h6,ul,p {
 ul { list-style: none; }
 
 html, body {
+    min-height: 100%;
     height: 100%;
-    background: @body-bg;
     background: url('/img/ahlure-bg.jpg') no-repeat;
+    background-color: #000;
     background-size: cover;
 }
 
